gccida/g2/tree_cons
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/tree_cons/src/tree.c:1781:12: error: expected expression
*( _OWORD *)&result->decl.common.type = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/tree_cons/src/tree.c:1781:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->decl.common.type = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/tree_cons/src/obj/tree.o] Error 1
